fix: pins not fitting into window

--- a/app/styles/globals/_pinnable.scss
+++ b/app/styles/globals/_pinnable.scss
@@ -49,3 +49,7 @@
 .bt-pinned-glow {
   animation: pinned-glow-keyframes 1s ease;
 }
+
+.bt-pinned-item-popup {
+    max-width: 0;
+}
